<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp" >

    <androidx.cardview.widget.CardView
        android:id="@+id/imageHolder"
        android:layout_width="62dp"
        android:layout_height="62dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/product_image_background"
        app:cardCornerRadius="6dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            tools:src="@drawable/product_image_placeholder"
            android:contentDescription="@string/product_image" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:lineHeight="15dp"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="14sp"
            tools:text="@string/product_name_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:lineHeight="15dp"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="14sp"
                tools:text="@string/product_price_placeholder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:lineHeight="15dp"
                android:text="@string/price_and_weight_divider"
                android:textColor="@color/product_weight_color"
                android:textFontWeight="400"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:lineHeight="15dp"
                android:textColor="@color/product_weight_color"
                android:textFontWeight="400"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck"
                tools:text="@string/product_weight_placeholder" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/product_count_color"
            app:cardCornerRadius="10dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="6dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/decrement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/decrement_button"
                    android:src="@drawable/decrement_icon"
                    android:background="@drawable/count_buttons_ripple"
                    tools:ignore="RedundantDescriptionCheck" />

                <TextView
                    android:id="@+id/count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="16dp"
                    android:includeFontPadding="false"
                    android:lineHeight="15dp"
                    android:textColor="@color/black"
                    android:textFontWeight="500"
                    android:textSize="14sp"
                    tools:text="@string/product_count_placeholder" />

                <ImageView
                    android:id="@+id/increment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/increment_button"
                    android:src="@drawable/increment_icon"
                    android:background="@drawable/count_buttons_ripple"
                    tools:ignore="RedundantDescriptionCheck" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</LinearLayout>