<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragments.BagFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp" >

        <ImageView
            android:id="@+id/locationIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/location_icon"
            android:contentDescription="@string/location_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="7dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/userCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:includeFontPadding="false"
                tools:text="@string/user_city_placeholder"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:lineHeight="22dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                tools:text="@string/date_placeholder"
                android:textColor="@color/date_text_color"
                android:textFontWeight="400"
                android:textSize="14sp"
                android:lineHeight="16dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:contentDescription="@string/profile_picture"
            android:scaleType="fitEnd"
            android:src="@drawable/profile_pic_placeholder" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/circularLoader"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="8dp"
        android:clipToPadding="false"
        tools:itemCount="3"
        tools:listitem="@layout/bag_product_item" />

</LinearLayout>